# AMBER-ff

./: .dockerignore  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  RUNNING_BENCHMARKS.md  atom_ID_rules.md  benchmarking.md  build_and_run.sh  requirements.txt  run_AMBER_benchmarking.sh  run_AMBER_benchmarking_simple.sh  run_AMBER_custom.sh  test.sh
benchmarks/: plot_by_class.py  plot_errors.py  plot_parity.py  run_parity.py
dihedral_scan/: scan_dihedral.py
dihedral_scan/results/: But-1-ene_scan.csv
input_molecules/: ethane.xyz  ethylene_PCS2.xyz  list_of_molecules.md  n-butane.xyz  n-hexane.xyz  n-pentane.xyz  propane.xyz
input_molecules_copy/: 1,2,3,5-hexatetraene trans_PCS2.xyz  1,3,5-hexatriyne_PCS2.xyz  2-methyl-1-propene_PCS2.xyz  acetic acid_PCS2.xyz  acetylene_PCS2.xyz  butadiene_SE.xyz  cis acrylic acid_PCS2.xyz  cyclobutane_PCS2.xyz  cyclohexane_SE.xyz  cyclohexene_PCS2.xyz  cyclopentane c2_PCS2.xyz  cyclopropane_SE.xyz  ethenol_SE.xyz  isobutane_PCS2.xyz  isopentane_PCS2.xyz  list_of_molecules.md  methane_SE.xyz  n-hexane.xyz  n-pentane.xyz  neopentane_PCS2.xyz  propanal_SE.xyz
input_molecules_copy/2+_functional_groups/: chloroform.xyz  glycolic_acid.xyz
input_molecules_copy/alkenes/: ethene.xyz  propene.xyz
input_molecules_copy/alkynes/: 1-butyne.xyz  3-methyl-but-3-en-1-yne_PCS2.xyz  ethyne.xyz  propyne.xyz
input_molecules_copy/amines/: 2_methyl_propane_2_amine.xyz  propan_1_amine.xyz  propan_2_amine.xyz
input_molecules_copy/branched_alkanes/: 2_3-dimethylbutane.xyz
input_molecules_copy/carboxylic_acids/: trans_acrylic_acid.xyz
input_molecules_copy/halogenated/: ethyl_chloride.xyz  (+1 more)
params/: atom_types.json  bond_stretch.json  param_file_format.md
report/: report.docx
src/: atom_typing.cpp  atom_typing.hpp  dihedral_scan_main.cpp  ff.cpp  ff.hpp  ff_params.hpp  geom_util.cpp  geom_util.hpp  main.cpp  mol_utils.cpp  mol_utils.hpp  molecule.cpp  molecule.hpp  parsing.hpp  read_params.cpp  read_params.hpp  read_xyz.cpp  read_xyz.hpp  util.cpp  util.hpp
tests/: test_calc_ff.cpp  test_hc.py  test_hello.cpp  test_params.cpp  test_xyz.cpp
(+3 files in other folders)
